Fix new design bugs

--- a/Frontend/src/app/main/app.main.html
+++ b/Frontend/src/app/main/app.main.html
@@ -1,6 +1,7 @@
 ﻿<div>
     <authorization [userAuthenticated]="userAuthenticated"
                    (onChangedAuth)="onChangedAuth($event)"
+                   (onChangedUserName)="onChangedUserName($event)"
                    [userName] = "userName">
     </authorization>
     <notelist 
