--- a/Frontend/src/app/authorization/app.authorization.css
+++ b/Frontend/src/app/authorization/app.authorization.css
@@ -33,9 +33,16 @@ input.ng-touched.ng-invalid {
     color: #2F7DF6;
 }
 
+@media screen and (max-width: 500px) {
+    .appName {
+        display: none;
+    }
+}
+
+
 .userNameBlock {
     padding: 10px 20px 0 20px;
-    height: 40px;
+    min-height: 40px;
     background: #FFFFFF;
     border-radius: 20px;
 
@@ -60,7 +67,6 @@ input.ng-touched.ng-invalid {
     letter-spacing: 0.04em;
     background-color: #E5E5E5;
     border: 5px solid #E5E5E5;
-    outline: none;
     height: 40px;
     color: #2F7DF6;
     z-index: 1;
@@ -71,6 +77,7 @@ input.ng-touched.ng-invalid {
         border-radius: 20px;
         color: #FFFFFF;
     }
+
 
 .logoutIcon {
     margin-top: -5px;
@@ -88,18 +95,12 @@ input.ng-touched.ng-invalid {
     padding: 24px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 400px) {
     .formContainer {
-        /*position: initial;*/
-        margin-top: 0px;
+        right: 0;
     }
 }
 
-@media screen and (max-width: 360px) {
-    .formContainer {
-        width: auto;
-    }
-}
 
 .formHeader {
     font-family: Lato;
@@ -179,3 +180,10 @@ input {
     height: 359px;
 }
 
+@media screen and (max-width: 400px) {
+    .icon {
+        top: 300px;
+        margin: 0 0 0 -100px;
+        width: 200px;
+    }
+}
