--- a/Frontend/src/app/authorization/app.authorization.html
+++ b/Frontend/src/app/authorization/app.authorization.html
@@ -15,7 +15,6 @@
                 <path d="M2 0H11C11.5304 0 12.0391 0.210714 12.4142 0.585786C12.7893 0.960859 13 1.46957 13 2V4H11V2H2V18H11V16H13V18C13 18.5304 12.7893 19.0391 12.4142 19.4142C12.0391 19.7893 11.5304 20 11 20H2C1.46957 20 0.960859 19.7893 0.585786 19.4142C0.210714 19.0391 0 18.5304 0 18V2C0 1.46957 0.210714 0.960859 0.585786 0.585786C0.960859 0.210714 1.46957 0 2 0Z" fill="#2F7DF6" />
                 <path d="M12.09 13.59L13.5 15L18.5 10L13.5 5L12.09 6.41L14.67 9H5V11H14.67L12.09 13.59Z" fill="#2F7DF6" />
             </svg>
-
         </div>
     </div>
 
@@ -39,7 +38,7 @@
                 Fill in all required fields. <br />
             </span>
 
-            <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+            <div *ngIf="error" class="validationErrorText">{{error}}</div>
         </div>
     </form>
 
