--- a/Frontend/src/app/authorization/app.authorization.css
+++ b/Frontend/src/app/authorization/app.authorization.css
@@ -178,6 +178,7 @@ input {
     margin: 0 0 0 -200px;
     width: 400px;
     height: 359px;
+    z-index: -1;
 }
 
 @media screen and (max-width: 400px) {
