--- a/Frontend/src/app/authorization/app.authorization.css
+++ b/Frontend/src/app/authorization/app.authorization.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+    
 
 .hiden {
     display: none;
@@ -7,6 +8,11 @@
 
 .authorization {
     background-color: #E5E5E5;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
 }
 
 input.ng-touched.ng-invalid {
@@ -41,7 +47,7 @@ input.ng-touched.ng-invalid {
 
 
 .userNameBlock {
-    padding: 10px 20px 0 20px;
+    padding: 11px 20px;
     min-height: 40px;
     background: #FFFFFF;
     border-radius: 20px;
@@ -55,21 +61,25 @@ input.ng-touched.ng-invalid {
 }
 
 .userNameIcon {
-    margin-right: 10px;
+    margin-right: 8px;
+    margin-top: -2px;
 }
 
 .authPanelButton {
-    margin-left: 10px;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 16px;
-    line-height: 19px;
-    letter-spacing: 0.04em;
+    text-align: center;
+    padding: 0 20px;
+    margin-left: 5px;
     background-color: #E5E5E5;
     border: 5px solid #E5E5E5;
     height: 40px;
     color: #2F7DF6;
     z-index: 1;
+    outline: none;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.04em;
 }
     .authPanelButton:hover { /* Rectangle 2 */
         background: #2F7DF6;
@@ -77,7 +87,6 @@ input.ng-touched.ng-invalid {
         border-radius: 20px;
         color: #FFFFFF;
     }
-
 
 .logoutIcon {
     margin-top: -5px;
@@ -136,6 +145,18 @@ input {
     letter-spacing: 0.04em;
 }
 
+    input::-webkit-input-placeholder {
+        color: #C1C1C1;
+    }
+
+    input:-ms-input-placeholder {
+        color: #C1C1C1;
+    }
+
+    input:-moz-placeholder. {
+        color: #C1C1C1;
+    }
+
 .inputIcon {
     position: absolute;
     right: 20px;
@@ -149,6 +170,7 @@ input {
     top: 224px;
     background: #2F7DF6;
     border-radius: 20px;
+    margin-top: 8px;
     margin-bottom: 5px;
 
     font-family: Lato;
@@ -161,6 +183,7 @@ input {
 }
 
 .validationErrorText {
+    margin-top: 16px;
     font-family: Lato;
     font-style: normal;
     font-weight: normal;
@@ -168,6 +191,7 @@ input {
     line-height: 14px;
     letter-spacing: 0.04em;
     color: #FF5F76;
+    text-align: center;
 }
 
 .icon {
