--- a/Frontend/src/app/notelist/app.notelist.css
+++ b/Frontend/src/app/notelist/app.notelist.css
@@ -13,7 +13,7 @@ div {
 }
 
 .noteContainer {
-    height: 209px;
+    height: 240px;
     background: #FFFFFF;
     box-shadow: 0px 4px 15px rgba(9, 59, 137, 0.1);
     border-radius: 20px;
@@ -21,12 +21,24 @@ div {
     padding: 24px;
 }
 
+
 @media screen and (max-width: 768px) {
     .noteContainer {
         padding: 10px;
     }
 }
 
+@media screen and (max-width: 400px) {
+    .noteContainer {
+        height: 280px;
+    }
+
+    .deleteButtonBlock {
+        position: absolute;
+        right: 10px;
+        bottom: 0;
+    }
+}
 
 
 .textBlockInherit {
@@ -44,7 +56,7 @@ div {
     color: #424242;
     padding: 17px;
     border-radius: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 24px;
 }
 
     .textBlockInherit.selected {
@@ -63,7 +75,7 @@ div {
     text-align: right;
     font-size: 12px;
     color: #2F7DF6;
-    margin-bottom: 10px;
+    margin-bottom: 24px;
 }
 
 
@@ -89,6 +101,7 @@ div {
     position: relative;
     display: flex;
     overflow: hidden;
+    padding: 2px 3px;
 }
 
 .lineBlock {
@@ -101,36 +114,43 @@ div {
 }
 
 .line {
-    top: 30px;
-    left: 0;
+    position: absolute;
+    top: 17px;
+    left: -38px;
     margin-top: 7px;
-    width: 100em;
 }
 
 .createButtonBlock {
     border-left: 25px solid #E5E5E5;
     position: absolute;
-    right: 0px;
+    right: 0;
 }
 
-
 .createButton {
-    width: 136px;
+    padding: 0 20px;
+    outline: none;
+    border: none;
     height: 40px;
     background: #2F7DF6;
     border-radius: 20px;
     font-size: 20px;
     font-size: 14px;
     color: #FFFFFF;
-    padding-left: 30px;
+    padding-left: 40px;
     margin: 0;
+    border: 1px solid #2F7DF6;
 }
 
+    .createButton:hover {
+        transition: 0.5s;
+        border: 1px solid black;
+    }
 
 .createButtonIcon {
+    pointer-events: none;
     position: absolute;
     top: 8px;
-    left: 15px;
+    left: 10px;
 }
 
 .buttonBlock {
@@ -191,6 +211,7 @@ div {
 }
 
 .deleteButtonIcon {
+    pointer-events: none;
     position: absolute;
     left: 20px;
     top: 12px;
