--- a/Frontend/src/app/notelist/app.notelist.html
+++ b/Frontend/src/app/notelist/app.notelist.html
@@ -1,15 +1,17 @@
 <div class="notelist">
     <div class="col-md-8 offset-md-2 tableTitle">
-        <span class="notes">Notes</span>
+        <span class="notes">Заметки</span>
         <div class="lineBlock">
             <svg class="point" width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="5" cy="5" r="5" fill="#2F7DF6" />
             </svg>
-            <img src="/assets/line.svg" class="line">
+            <svg class="line" width="1050" height="1" viewBox="0 0 706 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <line x1="0.5" y1="0.5" x2="705.5" y2="0.499938" stroke="#2F7DF6" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
         </div>
         <div class="createButtonBlock">
-            <button class="btn btn-primary createButton" (click)="createNote()">New Note</button>
-            <img class="createButtonIcon" (click)="createNote()" src="/assets/buttonIcon.svg">
+            <button class="createButton" (click)="createNote()">Новая заметка</button>
+            <img class="createButtonIcon" src="/assets/buttonIcon.svg">
         </div>
     </div>
 
@@ -21,13 +23,13 @@
             </div>
             <div class="buttonBlock">
                 <div class="saveAndCancelButtons">
-                    <button class="btn btn-primary saveButton" [class.selected]="note.Selected" (click)="update(note, index)">Save <br /></button>
-                    <button class="btn btn-primary cancelButton" [class.selected]="note.Selected" (click)="unselectNote(note, index)">Cancel <br /></button>
+                    <button class="btn btn-primary saveButton" [class.selected]="note.Selected" (click)="update(note, index)">Сохранить <br /></button>
+                    <button class="btn btn-primary cancelButton" [class.selected]="note.Selected" (click)="unselectNote(note, index)">Отменить <br /></button>
                 </div>
 
                 <div class="deleteButtonBlock">
-                    <button class="btn btn-primary deleteButton" [class.selected]="note.Selected" (click)="del(note, index)">Delete</button>
-                    <svg (click)="del(note, index)" class="deleteButtonIcon" width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <button class="btn btn-primary deleteButton" [class.selected]="note.Selected" (click)="del(note, index)">Удалить заметку</button>
+                    <svg class="deleteButtonIcon" width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 6V16H3V6H11ZM9.5 0H4.5L3.5 1H0V3H14V1H10.5L9.5 0ZM13 4H1V16C1 17.1 1.9 18 3 18H11C12.1 18 13 17.1 13 16V4Z" fill="#2F7DF6" />
                     </svg>
                 </div>
@@ -37,7 +39,7 @@
 
     <div *ngIf="!notelist.length" class="iconBlock">
         <img src="/assets/noRecords.svg" class="icon" alt="You have no records."> <br />
-        <span class="iconText">You have no records</span>
+        <span class="iconText">У вас нет записей.</span>
     </div>
 </div>
 
